# lms_mvp

./: .gitignore  api_documentation.md  lms_backend_task.md  lms_system.sql
lms_backend/: .env  add_room_column.py  backfill_results.py  debug_academic_calc.py  debug_cpa_student.py  diagnose_data.py  fix_bcrypt.ps1  fix_db.py  fix_missing_columns.py  migration_cumulative_results.py  migration_schedule.py  pyproject.toml  recalculate_cpa.py  script_add_is_active.py  setup_cumulative_results.py  test_login_flow.py  verify_academic_features.py
lms_backend/app/: main.py
lms_backend/app/auth/: dependencies.py  security.py
lms_backend/app/core/: config.py
lms_backend/app/crud/: user.py
lms_backend/app/models/: __init__.py  academic.py  academic_year.py  audit_log.py  chat.py  cumulative_result.py  enums.py  report.py  setting.py  timetable.py  tuition.py  user.py
lms_backend/app/routers/: auth.py  chat.py  deans.py  lecturers.py  reports.py  search.py  statistics.py  students.py  tuitions.py
lms_backend/app/schemas/: academic.py  academic_year.py  chat.py  report.py  tuition.py  user.py
lms_backend/app/services/: academic_service.py  base.py  class_service.py  dean_service.py  lecturer_service.py  otp_service.py  report_service.py  socket_service.py  student_service.py  tuition_service.py
lms_backend/app/utils/: academic_calculator.py  audit.py
lms_backend/tests/: test_main.py
lms_frontend/: index.html  package-lock.json  package.json
lms_frontend/src/: App.tsx
lms_mobile/: README.md  huongdan.txt  pubspec.yaml
lms_mobile/android/: gradle.properties
(+60 files in other folders)
